fix copy button being covered by scroll bar

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -38,6 +38,8 @@ div[class*="language-"]
 
 div[class*="language-"] pre[class*="code-copy-added"]
   position: static
+  svg
+    bottom: 17.5px !important;
 
 /** 
  * Darkmode color-fixes
